# result

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/: resultConfig.cmake.in
include/: result.hpp
include/result/: bind.hpp  chain_if_error.hpp  from_throwable.hpp  monad.hpp  version.hpp
scripts/: liftoff.sh
test/: test.cpp
